--- a/public/index.html
+++ b/public/index.html
@@ -11,72 +11,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <title>LGT后台管理系统</title>
-    <style>
-        .spinner {
-            margin: 100px auto;
-            width: 50px;
-            height: 60px;
-            text-align: center;
-            font-size: 10px;
-        }
-
-        .spinner>div {
-            background-color: #1890ff;
-            height: 100%;
-            width: 6px;
-            display: inline-block;
-            -webkit-animation: stretchDelay 1.2s infinite ease-in-out;
-            animation: stretchDelay 1.2s infinite ease-in-out;
-        }
-
-        .spinner .rect2 {
-            -webkit-animation-delay: -1.1s;
-            animation-delay: -1.1s;
-        }
-
-        .spinner .rect3 {
-            -webkit-animation-delay: -1.0s;
-            animation-delay: -1.0s;
-        }
-
-        .spinner .rect4 {
-            -webkit-animation-delay: -0.9s;
-            animation-delay: -0.9s;
-        }
-
-        .spinner .rect5 {
-            -webkit-animation-delay: -0.8s;
-            animation-delay: -0.8s;
-        }
-
-        @-webkit-keyframes stretchDelay {
-
-            0%,
-            40%,
-            100% {
-                -webkit-transform: scaleY(0.4)
-            }
-
-            20% {
-                -webkit-transform: scaleY(1.0)
-            }
-        }
-
-        @keyframes stretchDelay {
-
-            0%,
-            40%,
-            100% {
-                transform: scaleY(0.4);
-                -webkit-transform: scaleY(0.4);
-            }
-
-            20% {
-                transform: scaleY(1.0);
-                -webkit-transform: scaleY(1.0);
-            }
-        }
-    </style>
+    <style>#loading-mask{position:fixed;left:0;top:0;height:100%;width:100%;background:#fff;user-select:none;z-index:9999;overflow:hidden}.loading-wrapper{position:absolute;top:50%;left:50%;transform:translate(-50%,-100%)}.loading-dot{animation:antRotate 1.2s infinite linear;transform:rotate(45deg);position:relative;display:inline-block;font-size:64px;width:64px;height:64px;box-sizing:border-box}.loading-dot i{width:22px;height:22px;position:absolute;display:block;background-color:#1890ff;border-radius:100%;transform:scale(.75);transform-origin:50% 50%;opacity:.3;animation:antSpinMove 1s infinite linear alternate}.loading-dot i:nth-child(1){top:0;left:0}.loading-dot i:nth-child(2){top:0;right:0;-webkit-animation-delay:.4s;animation-delay:.4s}.loading-dot i:nth-child(3){right:0;bottom:0;-webkit-animation-delay:.8s;animation-delay:.8s}.loading-dot i:nth-child(4){bottom:0;left:0;-webkit-animation-delay:1.2s;animation-delay:1.2s}@keyframes antRotate{to{-webkit-transform:rotate(405deg);transform:rotate(405deg)}}@-webkit-keyframes antRotate{to{-webkit-transform:rotate(405deg);transform:rotate(405deg)}}@keyframes antSpinMove{to{opacity:1}}@-webkit-keyframes antSpinMove{to{opacity:1}}</style>
 </head>
 
 <body>
@@ -85,14 +20,11 @@
             continue.</strong>
     </noscript>
     <div id="app">
-        <div class="spinner">
-            <div class="rect1"></div>
-            <div class="rect2"></div>
-            <div class="rect3"></div>
-            <div class="rect4"></div>
-            <div class="rect5"></div>
+        <div id="loading-mask">
+            <div class="loading-wrapper">
+                <span class="loading-dot loading-dot-spin"><i></i><i></i><i></i><i></i></span>
+            </div>
         </div>
-        <div style="display: flex;align-items: center;justify-content: center;font-weight: bold">加载中...</div>
     </div>
     <!-- built files will be auto injected -->
 </body>
